Fix: Video note editing textarea is too short

--- a/static/style.css
+++ b/static/style.css
@@ -209,7 +209,7 @@ main {}
 .video-note textarea {
     width: 100%;
     max-height: 15em;
-    height: 5em;
+    height: 8em;
     resize: vertical;
 }
 
